buttons style, js counter

--- a/src/scss/modules/glass.scss
+++ b/src/scss/modules/glass.scss
@@ -1,6 +1,17 @@
 .glass {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 280px;
     height: 280px;
     background: url('./../assets/img/water-glass.svg');
     background-size: contain;
+    margin-bottom: 40px;
+
+    &__counter {
+        font-weight: 500;
+        font-size: 112px;
+        color: #000;
+        margin-top: 50px;
+    }
 }
